		single area.
		Added new experimental files database code which will only be
		used if configured with --enable-experiment.

	mbaff:
		Added new experimental files database code which will only be
                used if configured with --enable-experiment.

	mbnntp:
		New program, news server to read echomail with a news client.
		Reading news works, no posts yet.

	mbsebbs:
		Added loging of virus scanner results.
		Patches for offline reader programs that create messages with
		wrong line terminaters (Sempoint).
		Added new experimental files database code which will only be
                used if configured with --enable-experiment.

	mbsetup:
		Added auto setup for message area creation date. Also creates
		a faked newsgroup name in echomail areas. Both settings are
		needed for the newsserver.
		It wasn't possible anymore to change the number of systems in
		menu 1.11.11
		Fixed a header include.
		Fixed an error where new created file areas were created
		without a file header.

	mbtask:
		Removed debug logging for the disk thread.
		Added mbnntp to the taskregs to count as a user program.
		In check for T-Mail fileboxes added condition that the zone
		must exist in the setup.

	script:
		In the maint script removed the check option from the mbfile
		command so it will not run every day.


v0.51.3		22-Mar-2003 - 11-Apr-2004

	general:
		Removed one setup entry for check for free diskspace, there
		were two different values for the same purpose. The removed
		one was not used.
		Moved doc directory from /opt/mbse/doc to /opt/mbse/share/doc.
		Added configure test for CPU optimization flags. Use with
		./configure --enable-optimize.
		Added charset kludges for CP852 2 and CP895 2, Czech Latin-2
		and Kamenicky. There are no mapping tables available.

	mbtask:
		Signal handler for sigchld set to sig_dfl, test for Fedora.
		Removed setup for old diskspace parameter.

	mbsetup:
		Added html sitedocs creation. The advantage of html over the