@@ -30,6 +30,8 @@
 
 #include "../config.h"
 #include "../lib/mbselib.h"
+#include "../lib/users.h"
+#include "../lib/mbsedb.h"
 #include "screen.h"
 #include "mutil.h"
 #include "ledit.h"
@@ -244,7 +246,7 @@ void FileScreen(void)
  */
 int EditFileRec(int Area)
 {
-	FILE		*fil, *fp;
+	FILE		*fil;
 	char		mfile[PATH_MAX], *temp, tpath[65], frpath[81], topath[81];
 	long		offset;
 	unsigned long	crc, crc1;
@@ -252,6 +254,11 @@ int EditFileRec(int Area)
 	DIR		*dp;
 	struct dirent	*de;
 	struct stat	stb;
+#ifdef	USE_EXPERIMENT
+	struct _fdbarea	*fdb_area = NULL;
+#else
+	FILE		*fp;
+#endif
 
 	clr_index();
 	working(1, 0, 0);
@@ -370,6 +377,17 @@ int EditFileRec(int Area)
 			    /*
 			     * Attempt to disable this area, but check first.
 			     */
+#ifdef	USE_EXPERIMENT
+			    if ((fdb_area = mbsedb_OpenFDB(Area, 30))) {
+	    			fseek(fdb_area->fp, 0, SEEK_END);
+				files = ((ftell(fdb_area->fp) - fdbhdr.hdrsize) / fdbhdr.recsize);
+				if (files) {
+				    errmsg("There are stil %d files in this area", files);
+				    Available = TRUE;
+				}
+				mbsedb_CloseFDB(fdb_area);
+			    }
+#else
 			    if ((fp = fopen(temp, "r"))) {
 				if (fread(&fdbhdr, sizeof(fdbhdr), 1, fp) == 1) {
 				    fseek(fp, 0, SEEK_END);
@@ -381,6 +399,7 @@ int EditFileRec(int Area)
 				}
 				fclose(fp);
 			    }
+#endif
 			    if (!Available) {
 				if (yes_no((char *)"Are you sure you want to delete this area") == 0)
 				    Available = TRUE;
@@ -416,6 +435,10 @@ int EditFileRec(int Area)
 			} 
 			if (!area.Available && Available) {
 			    area.Available = TRUE;
+#ifdef	USE_EXPERIMENT
+			    if ((fdb_area = mbsedb_OpenFDB(Area, 30)))
+				mbsedb_CloseFDB(fdb_area);
+#else
 			    if ((fp = fopen(temp, "a+")) == NULL) {
 				WriteError("$Can't create file database %s", temp);
 			    } else {
@@ -425,6 +448,7 @@ int EditFileRec(int Area)
 				fclose(fp);
 			    }
 			    chmod(temp, 0660);
+#endif
 			}
 			free(temp);
 			break;
