@@ -30,6 +30,8 @@
 
 #include "../config.h"
 #include "../lib/mbselib.h"
+#include "../lib/users.h"
+#include "../lib/mbsedb.h"
 #include "screen.h"
 #include "mutil.h"
 #include "ledit.h"
@@ -357,7 +359,10 @@ void InitFDB(void)
     struct dirent	    *de;
     struct OldFILERecord    old;
     struct stat		    sb;
-    
+#ifdef	USE_EXPERIMENT
+    struct _fdbarea	    *fdb_area = NULL;
+#endif
+
     records = CountFilearea();
     if (records <= 0)
 	return;
@@ -448,7 +453,17 @@ void InitFDB(void)
 		    fclose(fp1);
 		    sprintf(temp, "%s/fdb/fdb%ld.data", getenv("MBSE_ROOT"), Area);
 		    unlink(temp);
-		}
+		} // Old area type upgrade.
+
+		/*
+		 * Current area, check
+		 */
+#ifdef	USE_EXPERIMENT
+		if ((fdb_area = mbsedb_OpenFDB(Area, 30)) == NULL)
+		    WriteError("InitFDB(): database area %ld might be corrupt", Area);
+		else
+		    mbsedb_CloseFDB(fdb_area);
+#endif
 	    }
 	}
 	fclose(fil);
